Fix styling (scrollbars, user select & drag), refactor code

--- a/src/app/components/gallery/gallery-item/gallery-item.component.scss
+++ b/src/app/components/gallery/gallery-item/gallery-item.component.scss
@@ -7,6 +7,8 @@
         img.thumbnail {
             height: 100%;
             object-fit: cover;
+            user-select: none;
+            -webkit-user-drag: none;
         }
     }
     .filename {
